# gplSeasonManager

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: windows-build-msvc.yml  windows-build-msys2.yml
include/: Defaults.hpp  GplEvent.hpp  GplSeason.hpp  GplTrack.hpp  ParseResult.hpp  helpers.hpp
src/: gplSeasonManager.cpp
